--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,18 +3,43 @@
 {% block title %}Hello IndexController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <script src="{{ asset('js/table.js') }}"></script>
+    <div class="container mt-5" >
+        <div>
+            <form>
+                <label for="selectRegion">Region:</label>
+                <select id="selectRegion" class="custom-select">
+                    <option value="EN">England</option>
+                    <option value="FR">France</option>
+                    <option value="RU">Russia</option>
+                </select>
+            </form>
+        </div>
+        <div class="container mt-5">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">UUID</th>
+                    <th scope="col">Full Name</th>
+                    <th scope="col">Address</th>
+                    <th scope="col">Phone</th>
+                </tr>
+          </thead>
+                <tbody id="tbody" class="response">
+{#                {% for data in generatedData %}#}
+{#                    <tr>#}
+{#                        <td>{{ data.id }}</td>#}
+{#                        <td>{{ data.uuid }}</td>#}
+{#                        <td>{{ data.name }}</td>#}
+{#                        <td>{{ data.address }}</td>#}
+{#                        <td>{{ data.phoneNumber }}</td>#}
+{#                    </tr>#}
+{#                {% endfor %}#}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/var/www/html/itransition5/src/Controller/IndexController.php</code></li>
-        <li>Your template at <code>/var/www/html/itransition5/templates/index/index.html.twig</code></li>
-    </ul>
-</div>
 {% endblock %}
+
