--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -7,12 +7,29 @@
     <div class="container mt-5" >
         <div>
             <form>
-                <label for="selectRegion">Region:</label>
-                <select id="selectRegion" class="custom-select">
-                    <option value="EN">England</option>
-                    <option value="FR">France</option>
-                    <option value="RU">Russia</option>
-                </select>
+                <div  class="d-inline-block">
+                    <label for="selectRegion">Region:</label>
+                    <select id="selectRegion" class="custom-select">
+                        <option value="EN">England</option>
+                        <option value="FR">France</option>
+                        <option value="RU">Russia</option>
+                    </select>
+                </div>
+                <div class="d-inline-block ms-5">
+                    <label for="sliderRange">
+                        Errors:
+                    </label>
+                    <input type="range" min="1" max="10" value="0" step="0.5" class="myslider" id="sliderRange">
+                </div>
+                <div class="d-inline-block ms-3">
+                    <label for="errorsNumber"></label><input id="errorsNumber" type="number" class="w-25" min="0" max="1000" step="1" value="0">
+                </div>
+                <div class="d-inline-block ms-5">
+                    <label for="sliderSeedRange">
+                        Seed:
+                    </label>
+                    <input type="range" min="1" max="1000" value="0" step="1" class="myslider" id="sliderSeedRange">
+                </div>
             </form>
         </div>
         <div class="container mt-5">
