--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -16,20 +16,29 @@
                     </select>
                 </div>
                 <div class="d-inline-block ms-5">
-                    <label for="sliderRange">
+                    <label for="errorSliderRange">
                         Errors:
                     </label>
-                    <input type="range" min="1" max="10" value="0" step="0.5" class="myslider" id="sliderRange">
+                    <input type="range" min="1" max="10" value="0" step="0.5" class="myslider" id="errorSliderRange">
                 </div>
                 <div class="d-inline-block ms-3">
-                    <label for="errorsNumber"></label><input id="errorsNumber" type="number" class="w-25" min="0" max="1000" step="1" value="0">
+                    <label for="errorsСount"></label><input id="errorsСount" type="number" class="w-50" min="0" max="1000" step="1" value="0">
                 </div>
                 <div class="d-inline-block ms-5">
-                    <label for="sliderSeedRange">
+                    <label for="seedValue">
                         Seed:
                     </label>
-                    <input type="range" min="1" max="1000" value="0" step="1" class="myslider" id="sliderSeedRange">
+                    <input type="text" value="0" class="" id="seedRange">
                 </div>
+                <div class="d-inline-block ms-2">
+                    <button class="btn btn-secondary" type="button" id="randomButton">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-shuffle" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M0 3.5A.5.5 0 0 1 .5 3H1c2.202 0 3.827 1.24 4.874 2.418.49.552.865 1.102 1.126 1.532.26-.43.636-.98 1.126-1.532C9.173 4.24 10.798 3 13 3v1c-1.798 0-3.173 1.01-4.126 2.082A9.6 9.6 0 0 0 7.556 8a9.6 9.6 0 0 0 1.317 1.918C9.828 10.99 11.204 12 13 12v1c-2.202 0-3.827-1.24-4.874-2.418A10.6 10.6 0 0 1 7 9.05c-.26.43-.636.98-1.126 1.532C4.827 11.76 3.202 13 1 13H.5a.5.5 0 0 1 0-1H1c1.798 0 3.173-1.01 4.126-2.082A9.6 9.6 0 0 0 6.444 8a9.6 9.6 0 0 0-1.317-1.918C4.172 5.01 2.796 4 1 4H.5a.5.5 0 0 1-.5-.5"></path>
+                            <path d="M13 5.466V1.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384l-2.36 1.966a.25.25 0 0 1-.41-.192m0 9v-3.932a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384l-2.36 1.966a.25.25 0 0 1-.41-.192"></path>
+                        </svg>
+                    </button>
+                </div>
+
             </form>
         </div>
         <div class="container mt-5">
