--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello IndexController!{% endblock %}
+{% block title %}User Fake Data{% endblock %}
 
 {% block body %}
     <script src="{{ asset('js/table.js') }}"></script>
