fix error with seed

--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -38,7 +38,6 @@
                         </svg>
                     </button>
                 </div>
-
             </form>
         </div>
         <div class="container mt-5">
@@ -52,17 +51,7 @@
                     <th scope="col">Phone</th>
                 </tr>
           </thead>
-                <tbody id="tbody" class="response">
-{#                {% for data in generatedData %}#}
-{#                    <tr>#}
-{#                        <td>{{ data.id }}</td>#}
-{#                        <td>{{ data.uuid }}</td>#}
-{#                        <td>{{ data.name }}</td>#}
-{#                        <td>{{ data.address }}</td>#}
-{#                        <td>{{ data.phoneNumber }}</td>#}
-{#                    </tr>#}
-{#                {% endfor %}#}
-                </tbody>
+                <tbody id="tbody" class="response"></tbody>
             </table>
         </div>
     </div>
