fix seed for new pages

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
         {% endblock %}
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
-
+            <script src="{{ asset('js/table.js') }}"></script>
         {% endblock %}
     </head>
     <body>
